<resources>
    <string name="app_name">Calculator</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_equal">=</string>
    <string name="_clear">CLEAR</string>
    <string name="_0">0</string>
    <string name="_divide">/</string>
    <string name="_mul">*</string>
    <string name="_add">+</string>
    <string name="_sub">-</string>
    <string name="created_by_rajatendu_dey">Created by Rajatendu Dey</string>
    <string name="made_by_rajatendu_dey">Made by Rajatendu Dey</string>
</resources>
